[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Objetos/Transicion_juego_crece.tscn" type="PackedScene" id=2]
[ext_resource path="res://Codigos/Locales/Ambientes/Virus_juni.gd" type="Script" id=3]
[ext_resource path="res://Recursos/Visuales/Interfaz/ventana_virus_texto.png" type="Texture" id=4]

[node name="Virus_juni" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1130.83, -208.554 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogNode" parent="." instance=ExtResource( 1 )]
timeline = "timeline-1628555730.json"

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1280.0
margin_top = -511.0
margin_right = 1280.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ColorRect"]

[node name="ventana_virus" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.0
margin_top = -197.0
margin_right = 186.0
margin_bottom = 199.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 185.979, 196.982 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ventana_virus"]

[node name="ColorRectNegro" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ColorRectNegro"]

[node name="Transicion_juego_crece" parent="." instance=ExtResource( 2 )]
mouse_filter = 2

[connection signal="pressed" from="Button" to="DialogNode" method="_on_Button_pressed"]
